adding first image

--- a/LPRC_Introduction.html
+++ b/LPRC_Introduction.html
@@ -6,6 +6,8 @@
 <p>I look forward to continuing our conversation and working together to deliver enhanced data solutions.</p>
 <p>Best regards,
 
-Roy Hayward 
-Principal Engineer 
+Roy Hayward
+Principal Engineer
 LVT.com</p>
+
+<img src="/image/architecture_intro.jpg">
