remove the pre-wrap

--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -24,7 +24,7 @@ body {
 
 body {
 	line-height: 1.5;
-	white-space: pre-wrap;
+	/* white-space: pre-wrap; */
 }
 
 a,
@@ -675,7 +675,10 @@ blockquote {
 
 </style></head><body><article id="3bc70b72-91c9-4f46-96c5-6ce5780f1e07" class="page sans"><header>
 	<h1 class="page-title">Next Phase of Orchestrated Security Solutions</h1><p class="page-description"></p></header>
-	<div class="page-body"><p id="bf57de72-1247-4d3e-9faa-5bdfbd736caf" class="">Orchestration: The planning or coordination of the elements of a situation to produce a desired effect.</p><hr id="dbc10b6e-55db-4610-91bf-5efb3801a45f"/><hr id="44cf2cf3-71f0-4ef8-a6b3-74a59faad84f"/><h1 id="3de745ce-9828-4189-88ca-0764cbcc4484" class="">What Does the Future look like?</h1><p id="8b7136e3-4251-4b35-9327-51c6038326c6" class="">As organizations tried to scale single pane of glass solutions they needed more people. They needed these people to be awake, alert, attentive, and ready to respond when an event of interest happened. Scaling such a workforce was expensive and wasteful. Automation was needed to make this better. And some automation was able to be achieved without changing the architecture.</p>
+	<div class="page-body">
+		<p id="bf57de72-1247-4d3e-9faa-5bdfbd736caf" class="">Orchestration: The planning or coordination of the elements of a situation to produce a desired effect.</p><hr id="44cf2cf3-71f0-4ef8-a6b3-74a59faad84f"/>
+		<h1 id="3de745ce-9828-4189-88ca-0764cbcc4484" class="">What Does the Future look like?</h1>
+		<p id="8b7136e3-4251-4b35-9327-51c6038326c6" class="">As organizations tried to scale single pane of glass solutions they needed more people. They needed these people to be awake, alert, attentive, and ready to respond when an event of interest happened. Scaling such a workforce was expensive and wasteful. Automation was needed to make this better. And some automation was able to be achieved without changing the architecture.</p>
 	<figure id="17e9c30f-245d-4f62-9da1-cc208eed86e2" class="image">
 		<a href="image/SinglePaneOfGlassProblem.png">
 			<img style="width:1024px" src="image/SinglePaneOfGlassProblem.png"/>
