update to index links and style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
 
 body {
 	line-height: 1.5;
-	white-space: pre-wrap;
+	/* white-space: pre-wrap; */
 }
 
 a,
@@ -683,7 +683,8 @@ blockquote {
 		<p id="5956d475-f167-4527-8206-a1d8bea7f60a" class="">An effort to prove this out is going on in the Physical Security industry and you can find out more about it here "<a href="https://royhayward.github.io/OrchestrationNextPhase.html">Next Phase of Orchestrated Security Solutions</a>"</p>
 		<p id="9181aa8a-b741-4cc0-b0ac-1f4b7273519e" class="">If you want to know more about this idea and are looking for the other resources, below is a list of related information. </p>
 		<ul id="67106886-cc9f-48a1-a49c-4a6ce9523824" class="bulleted-list">
-			<li style="list-style-type:disc">A link to something else.</li>
+			<li style="list-style-type:disc"><a href="EDA_patterns.html">What are the four patterns in EDA topologies?</a></li>
+			<li style="list-style-type:disc"><a href="EDA_short_history">A short history of Architectures.</a></li>
 		</ul>
 	</div>
 </article></body></html>
