--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -678,7 +678,7 @@ blockquote {
 	<div class="page-body">
 		<p id="bf57de72-1247-4d3e-9faa-5bdfbd736caf" class="">Orchestration: The planning or coordination of the elements of a situation to produce a desired effect.</p><hr id="44cf2cf3-71f0-4ef8-a6b3-74a59faad84f"/>
 		<h1 id="3de745ce-9828-4189-88ca-0764cbcc4484" class="">What Does the Future look like?</h1>
-		<p id="8b7136e3-4251-4b35-9327-51c6038326c6" class="">As organizations tried to scale single pane of glass solutions they needed more people. They needed these people to be awake, alert, attentive, and ready to respond when an event of interest happened. Scaling such a workforce was expensive and wasteful. Automation was needed to make this better. And some automation was able to be achieved without changing the architecture.</p>
+		<p id="8b7136e3-4251-4b35-9327-51c6038326c6" class="">As organizations scale Single Pane of Glass solutions they need more people. They need these people to be awake, alert, attentive, and ready to respond when an event of interest happens. Scaling such a workforce is expensive and wasteful. Automation is needed to make this viable. Some automation can be achieved without changing the architecture.</p>
 	<figure id="17e9c30f-245d-4f62-9da1-cc208eed86e2" class="image">
 		<a href="image/SinglePaneOfGlassProblem.png">
 			<img style="width:1024px" src="image/SinglePaneOfGlassProblem.png"/>
