--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ blockquote {
 		<p id="9181aa8a-b741-4cc0-b0ac-1f4b7273519e" class="">If you want to know more about this idea and are looking for the other resources, below is a list of related information. </p>
 		<ul id="67106886-cc9f-48a1-a49c-4a6ce9523824" class="bulleted-list">
 			<li style="list-style-type:disc"><a href="EDA_patterns.html">What are the four patterns in EDA topologies?</a></li>
-			<li style="list-style-type:disc"><a href="EDA_short_history">A short history of Architectures.</a></li>
+			<li style="list-style-type:disc"><a href="EDA_short_history.html">A short history of Architectures.</a></li>
 		</ul>
 	</div>
 </article></body></html>
