--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -744,5 +744,9 @@ blockquote {
 		<img style="width:1146px" src="image/target_architecture.png"/>
 	</a>
 </figure>
-<p id="ac224bed-cd56-4299-9cdd-0a613bcea154" class="">The ultimate goal is to combine more data to allow the system to react earlier and faster to a Red Action. </p><h2 id="f964b004-cedd-4f97-b8e8-1cac0aa84f9c" class="">The ASK</h2><p id="966b7c67-d9f1-4fab-9a72-3bdf9e402fff" class="">What I am asking you to do is to have a conversation with me. Let&#x27;s talk about this plan and see if you are able and willing to help me discover if we can put this together. If we can collaborate with different technologies and make something greater than its parts. </p><p id="77cd94a4-4645-4533-870d-0d7ecb378869" class="">
-</p></div></article></body></html>
+<p id="ac224bed-cd56-4299-9cdd-0a613bcea154" class="">The ultimate goal is to combine more data to allow the system to react earlier and faster to a Red Action. </p>
+<h2 id="f964b004-cedd-4f97-b8e8-1cac0aa84f9c" class="">The ASK</h2>
+<p id="966b7c67-d9f1-4fab-9a72-3bdf9e402fff" class="">What I am asking for is a conversation with me. How we can bring our security solutions together in a collaborative way to deliver better outcomes. And in a way that provides specific data-based insights and pushes the zone of detection farther out and earlier.</p>
+<p id="77cd94a4-4645-4533-870d-0d7ecb378869" class="">Can we talk?</p>
+<p id="77cd94a4-4645-4533-870d-0d7ecb378869" class="">Roy Hayward (rhayward@lvt.com)</p>
+</div></article></body></html>
