adding some navigatoin buttons and style

--- a/LetsProveThisOut.html
+++ b/LetsProveThisOut.html
@@ -134,6 +134,10 @@
         </p>
       </div>
     </article>
-    <span class="sans" style="font-size: 14px; padding-top: 2em"></span>
+	<div>
+		<a href="/OrchestrationNextPhase.html">
+			<button><span>Back to Orchestration Next Phase...</span></button>
+		</a>
+	</div>
   </body>
 </html>
