right and left buttons

--- a/LetsProveThisOut.html
+++ b/LetsProveThisOut.html
@@ -135,8 +135,11 @@
       </div>
     </article>
 	<div>
+		<a href="/">
+			<button class="green right"><span>Back to the begining...</span></button>
+		</a>
 		<a href="/OrchestrationNextPhase.html">
-			<button class="green"><span>Back to Orchestration Next Phase...</span></button>
+			<button class="green left"><span>Back to Orchestration Next Phase...</span></button>
 		</a>
 	</div>
   </body>
