--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -277,7 +277,7 @@
       </div>
       <div>
         <a href="/LetsProveThisOut.html">
-          <button class="green"><span>Let's Prove This Out...</span></button>
+          <button class="green right"><span>Let's Prove This Out...</span></button>
         </a>
       </div>
     </article>
