footer buttons on other pages.

--- a/EDA_patterns.html
+++ b/EDA_patterns.html
@@ -122,5 +122,13 @@
         </p>
       </div>
     </article>
+    <div>
+      <a href="/">
+        <button class="green left"><span>Back to the begining...</span></button>
+      </a>
+      <a href="/EDA_short_history.html">
+        <button class="green right"><span>A Short Historyof System Architectures...</span></button>
+      </a>
+    </div>
   </body>
 </html>
