--- a/EDA_short_history.html
+++ b/EDA_short_history.html
@@ -51,5 +51,13 @@
         <p id="bd88b37c-bd69-4cb4-8d82-4aed0487e756" class=""></p>
       </div>
     </article>
+    <div>
+      <a href="/">
+        <button class="green right"><span>Back to the begining...</span></button>
+      </a>
+      <a href="/OrchestrationNextPhase.html">
+        <button class="green left"><span>Orchestration Next Phase...</span></button>
+      </a>
+    </div>
   </body>
 </html>
