adding external links to the page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           If you want to know more about this idea and are looking for the other
           resources, below is a list of related information.
         </p>
+        <h2>Pages Here:</h2>
         <ul id="67106886-cc9f-48a1-a49c-4a6ce9523824" class="bulleted-list">
           <li style="list-style-type: disc">
             <a href="EDA_patterns.html"
@@ -38,6 +39,24 @@
             <a href="EDA_short_history.html"
               >A short history of Architectures.</a
             >
+          </li>
+        </ul>
+        <h2>Links to Other Resources:</h2>
+        <ul class="bulleted-list">
+          <li style="list-style-type: disc">
+            <a href="https://www.linkedin.com/pulse/what-problem-integration-roy-hayward/">
+              What is the problem with integration? (Part 1)
+            </a>
+          </li>
+          <li style="list-style-type: disc">
+            <a href="https://www.linkedin.com/pulse/solutions-problems-roy-hayward/">
+              Solutions to the problems. (Part 2)
+            </a>
+          </li> 
+          <li class="list-style-tyle: disc">
+            <a href="https://lpresearch.org/">
+              Loss Prevention Research Council
+            </a>
           </li>
         </ul>
       </div>
