--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,9 @@
 <ul>
+    <li>
+        <img src="/image/logo.svg" alt="Logo" width="500" height="500">
+    </li>
     <li><a href="/index.html">Home</a></li>
     <li><a href="/EDA_short_history.html">Short History of EDA</a></li>
     <li><a href="contact.asp">Contact</a></li>
     <li><a href="OrchestratoinNextPhase.html">EDA Orchestration - Nest Phase</a></li>
-  </ul>
+</ul>
