adding log image and nav css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </script>
   </head>
   <body>
-    <div id="nav"></div>
+    <div id="nav" class="nav"></div>
     <article id="3611c04c-b781-460b-bc68-fef8ddaa95d4" class="page sans">
       <header>
         <h1 class="page-title">OIA Index</h1>
