--- a/nav.html
+++ b/nav.html
@@ -4,6 +4,6 @@
     </li>
     <li><a href="/index.html">Home</a></li>
     <li><a href="/EDA_short_history.html">Short History of EDA</a></li>
-    <li><a href="contact.asp">Contact</a></li>
-    <li><a href="OrchestratoinNextPhase.html">EDA Orchestration - Nest Phase</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="OrchestrationNextPhase.html">EDA Orchestration - Next Phase</a></li>
 </ul>
