--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,9 @@
 <ul class="navbar">
     <li>
-        <img src="/image/logo.svg" alt="Logo" width="500" height="500">
+        <a href="/index.html">
+            <img src="/image/logo.svg" alt="Logo" width="500" height="500">
+        </a>
     </li>
-    <li><a href="/index.html">Home</a></li>
     <li><a href="/EDA_short_history.html">Short History of EDA</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="OrchestrationNextPhase.html">EDA Orchestration - Next Phase</a></li>
