adding compostable.js and nav to all pages

--- a/EDA_patterns.html
+++ b/EDA_patterns.html
@@ -2,9 +2,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Event-Driven Architecture Patterns</title>
-	<link rel="stylesheet" href="styles.css">
+	  <link rel="stylesheet" href="styles.css">
+    <script src="/js/compostable.js"></script>
   </head>
   <body>
+    <div id="nav"></div>
     <article id="172cc5d0-1e5f-40f7-a76e-06c485109326" class="page sans">
       <header>
         <h1 class="page-title">Event-Driven Architecture Patterns</h1>
@@ -130,5 +132,6 @@
         <button class="green right"><span>A Short Historyof System Architectures...</span></button>
       </a>
     </div>
+    <div id="footer"></div>
   </body>
 </html>
