--- a/EDA_short_history.html
+++ b/EDA_short_history.html
@@ -2,9 +2,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Short History of System Architectures</title>
-	<link rel="stylesheet" href="styles.css">
+	  <link rel="stylesheet" href="styles.css">
+    <script src="/js/compostable.js"></script>
   </head>
   <body>
+    <div id="nav"></div>
     <article id="47177e05-2292-4577-8833-950834bef769" class="page sans">
       <header>
         <h1 class="page-title">Short History of System Architectures</h1>
@@ -59,5 +61,6 @@
         <button class="green left"><span>Orchestration Next Phase...</span></button>
       </a>
     </div>
+    <div id="footer"></div>
   </body>
 </html>
