--- a/LetsProveThisOut.html
+++ b/LetsProveThisOut.html
@@ -3,8 +3,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Let&#x27;s Prove This Out</title>
 	<link rel="stylesheet" href="styles.css">
+	<script src="/js/compostable.js"></script>
   </head>
   <body>
+	<div id="nav"></div>
     <article id="110a31a2-a276-4871-a09b-86b98c3f72af" class="page sans">
       <header>
         <h1 class="page-title">Let&#x27;s Prove This Out</h1>
@@ -142,5 +144,6 @@
 			<button class="green left"><span>Back to Orchestration Next Phase...</span></button>
 		</a>
 	</div>
+	<div id="footer"></div>
   </body>
 </html>
