--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -2,9 +2,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Next Phase of Orchestrated Security Solutions</title>
-	<link rel="stylesheet" href="styles.css">
+	  <link rel="stylesheet" href="styles.css">
+    <script src="/js/compostable.js"></script>
   </head>
   <body>
+    <div id="nav"></div>
     <article id="3bc70b72-91c9-4f46-96c5-6ce5780f1e07" class="page sans">
       <header>
         <h1 class="page-title">
@@ -284,5 +286,6 @@
         </a>
       </div>
     </article>
+    <div id="footer"></div>
   </body>
 </html>
