--- a/nav.html
+++ b/nav.html
@@ -5,6 +5,6 @@
         </a>
     </li>
     <li><a href="/EDA_short_history.html">Short History of EDA</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="EDA_patterns.html">EDA Patterns</a></li>
     <li><a href="OrchestrationNextPhase.html">EDA Orchestration - Next Phase</a></li>
 </ul>
