child nav support

--- a/nav.html
+++ b/nav.html
@@ -6,5 +6,10 @@
     </li>
     <li><a href="/EDA_short_history.html">Short History of EDA</a></li>
     <li><a href="EDA_patterns.html">EDA Patterns</a></li>
-    <li><a href="OrchestrationNextPhase.html">EDA Orchestration - Next Phase</a></li>
+    <li>EDA Orchestration
+        <ul>
+            <li><a href="OrchestrationNextPhase.html">Next Phase</a></li>
+            <li><a href="LetsProveThisOut.html">Let's Prove It</a></li>
+        </ul>
+    </li>
 </ul>
