--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -2,7 +2,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Next Phase of Orchestrated Security Solutions</title>
-	  <link rel="stylesheet" href="styles.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/flatifycss/dist/css/flatify.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
     <script src="/js/compostable.js"></script>
   </head>
   <body>
