updating navbar to be flatlycss

--- a/nav.html
+++ b/nav.html
@@ -1,15 +1,16 @@
-<ul class="navbar">
-    <li>
-        <a href="/index.html">
-            <img src="/image/logo.svg" alt="Logo" width="500" height="500">
-        </a>
-    </li>
-    <li><a href="/EDA_short_history.html">Short History of EDA</a></li>
-    <li><a href="EDA_patterns.html">EDA Patterns</a></li>
-    <li>EDA Orchestration
-        <ul>
-            <li><a href="OrchestrationNextPhase.html">Next Phase</a></li>
-            <li><a href="LetsProveThisOut.html">Let's Prove It</a></li>
-        </ul>
-    </li>
-</ul>
+<nav class="menu-items-wrapper navbar">
+    <a class="navbar-logo" href="/">
+        <img src="/image/logo.svg" alt="logo" />
+      </a>
+    <ul class="links">
+        <li class="menu-item"><a href="/EDA_short_history.html">Short History of EDA</a></li> 
+        <li class="menu-item"><a href="/EDA_short_history.html">Short History of EDA</a></li>
+        <li class="menu-item"><a href="EDA_patterns.html">EDA Patterns</a></li>
+        <li class="menu-item arrow-button arrow-right">EDA Orchestration
+            <ul class="submenu menu-items-wrapper arrow-left">
+                <li class="menu-item"><a href="OrchestrationNextPhase.html">Next Phase</a></li>
+                <li class="menu-item"><a href="LetsProveThisOut.html">Let's Prove It</a></li>
+            </ul> 
+    </ul>
+
+</nav>
