flatifycss js files added.

--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -7,6 +7,8 @@
       rel="stylesheet"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/@popperjs/core@2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatifycss/dist/js/flatify.min.js" crossorigin="anonymous"></script>
     <script src="/js/compostable.js"></script>
   </head>
   <body>
