--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
         <li class="menu-item"><a href="/EDA_short_history.html">Short History of EDA</a></li>
         <li class="menu-item"><a href="EDA_patterns.html">EDA Patterns</a></li>
         <li class="menu-item arrow-button arrow-right">EDA Orchestration
-            <ul class="submenu menu-items-wrapper arrow-left">
+            <ul class="submenu menu-items-wrapper">
                 <li class="menu-item"><a href="OrchestrationNextPhase.html">Next Phase</a></li>
                 <li class="menu-item"><a href="LetsProveThisOut.html">Let's Prove It</a></li>
             </ul> 
