--- a/EDA_short_history.html
+++ b/EDA_short_history.html
@@ -68,10 +68,10 @@
     </article>
     <div>
       <a href="/">
-        <button class="green right"><span>Back to the begining...</span></button>
+        <button class="button style-accent push-left"><span>Back to the begining...</span></button>
       </a>
       <a href="/OrchestrationNextPhase.html">
-        <button class="green left"><span>Orchestration Next Phase...</span></button>
+        <button class="button style-accent push-right"><span>Orchestration Next Phase...</span></button>
       </a>
     </div>
     <div id="footer"></div>
