--- a/EDA_patterns.html
+++ b/EDA_patterns.html
@@ -139,10 +139,10 @@
     </article>
     <div>
       <a href="/">
-        <button class="green left"><span>Back to the begining...</span></button>
+        <button class="button style-accent push-left"><span>Back to the begining...</span></button>
       </a>
       <a href="/EDA_short_history.html">
-        <button class="green right"><span>A Short Historyof System Architectures...</span></button>
+        <button class="button style-accent push-right"><span>A Short Historyof System Architectures...</span></button>
       </a>
     </div>
     <div id="footer"></div>
