--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -295,10 +295,10 @@
             </div>
             <div>
               <a href="/">
-                <button class="green left"><span>Back to the begining...</span></button>
+                <button class="button style-accent push-left"><span>Back to the begining...</span></button>
               </a>
               <a href="/LetsProveThisOut.html">
-                <button class="green right"><span>Let's Prove This Out...</span></button>
+                <button class="button style-accent push-right"><span>Let's Prove This Out...</span></button>
               </a>
             </div>
           </article>
