remove second arrow

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
     <ul class="links">
         <li class="menu-item"><a href="/EDA_short_history.html">Short History of EDA</a></li> 
         <li class="menu-item"><a href="EDA_patterns.html">EDA Patterns</a></li>
-        <li class="menu-item arrow-button"><a href="#" class="arrow-button">EDA Orchestration</a>
+        <li class="menu-item"><a href="#" class="arrow-button">EDA Orchestration</a>
             <ul class="submenu menu-items-wrapper arrow-top">
                 <li class="menu-item"><a href="OrchestrationNextPhase.html">Next Phase</a></li>
                 <li class="menu-item"><a href="LetsProveThisOut.html">Let's Prove It</a></li>
