remove inline padding style

--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="nav"></div>
-    <div class="main-wrapper" styles="padding:50px">
+    <div class="main-wrapper">
       <main>
         <div class="homepage-features flex-column-center vertical-features">
           <article id="3bc70b72-91c9-4f46-96c5-6ce5780f1e07" class="page sans">
