buttons in divs

--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -294,12 +294,17 @@
               </p>
             </div>
             <div>
-              <a href="/">
-                <button class="button style-accent push-left"><span>Back to the begining...</span></button>
-              </a>
-              <a href="/LetsProveThisOut.html">
-                <button class="button style-accent push-right style-green"><span>Let's Prove This Out...</span></button>
-              </a>
+              <div class="push-left">
+                <a href="/">
+                  <button class="button style-accent push-left"><span>Back to the begining...</span></button>
+                </a>
+              </div>
+              <div class="push-right">
+                <a href="/LetsProveThisOut.html">
+                  <button class="button push-right style-green"><span>Let's Prove This Out...</span></button>
+                </a>
+              </div>
+              
             </div>
           </article>
         </div>
