fixing the bottom nav buttons and style

--- a/EDA_patterns.html
+++ b/EDA_patterns.html
@@ -137,12 +137,12 @@
         </p>
       </div>
     </article>
-    <div>
+    <div class="bottom-buttons">
       <a href="/">
-        <button class="button style-accent push-left"><span>Back to the begining...</span></button>
+        <button class="button style-accent"><span>Back to the begining...</span></button>
       </a>
       <a href="/EDA_short_history.html">
-        <button class="button style-accent push-right"><span>A Short Historyof System Architectures...</span></button>
+        <button class="button style-green"><span>A Short Historyof System Architectures...</span></button>
       </a>
     </div>
     <div id="footer"></div>
