--- a/OrchestrationNextPhase.html
+++ b/OrchestrationNextPhase.html
@@ -296,21 +296,17 @@
           Roy Hayward (rhayward@lvt.com)
         </p>
       </div>
-      <div>
-        <div class="push-left">
-          <a href="/">
-            <button class="button style-accent push-left">
-              <span>Back to the begining...</span>
-            </button>
-          </a>
-        </div>
-        <div class="push-right">
-          <a href="/LetsProveThisOut.html">
-            <button class="button push-right style-green">
-              <span>Let's Prove This Out...</span>
-            </button>
-          </a>
-        </div>
+      <div class="bottom-buttons">
+        <a href="/">
+          <button class="button style-accent">
+            <span>Back to the begining...</span>
+          </button>
+        </a>
+        <a href="/LetsProveThisOut.html">
+          <button class="button style-green">
+            <span>Let's Prove This Out...</span>
+          </button>
+        </a>
       </div>
     </article>
     <div id="footer"></div>
