--- a/EDA_short_history.html
+++ b/EDA_short_history.html
@@ -66,12 +66,12 @@
         <p id="bd88b37c-bd69-4cb4-8d82-4aed0487e756" class=""></p>
       </div>
     </article>
-    <div>
+    <div class="bottom-buttons">
       <a href="/">
-        <button class="button style-accent push-left"><span>Back to the begining...</span></button>
+        <button class="button style-accent"><span>Back to the begining...</span></button>
       </a>
       <a href="/OrchestrationNextPhase.html">
-        <button class="button style-accent push-right"><span>Orchestration Next Phase...</span></button>
+        <button class="button style-green"><span>Orchestration Next Phase...</span></button>
       </a>
     </div>
     <div id="footer"></div>
