--- a/LetsProveThisOut.html
+++ b/LetsProveThisOut.html
@@ -149,12 +149,12 @@
         </p>
       </div>
     </article>
-	<div>
+	<div class="bottom-buttons">
 		<a href="/">
-			<button class="button style-accent push-left"><span>Back to the begining...</span></button>
+			<button class="button style-accent"><span>Back to the begining...</span></button>
 		</a>
 		<a href="/OrchestrationNextPhase.html">
-			<button class="button style-accent push-right"><span>Back to Orchestration Next Phase...</span></button>
+			<button class="button style-green"><span>Back to Orchestration Next Phase...</span></button>
 		</a>
 	</div>
 	<div id="footer"></div>
