--- a/pages/MLfromEvents.html
+++ b/pages/MLfromEvents.html
@@ -1,7 +1,7 @@
 <article class="page sans">
   <header>
     <h1 class="page-title">Machine Learning from Events</h1>
-    <p class="page-description">Page Description</p>
+    <p class="page-description"> </p>
   </header>
   <div class="page-body">
     <p>
