--- a/pages/index.html
+++ b/pages/index.html
@@ -1,35 +1,61 @@
-<article id="3611c04c-b781-460b-bc68-fef8ddaa95d4" class="page sans">
+<article class="page sans">
   <header>
     <h1 class="page-title">OIA Index</h1>
     <p class="page-description"></p>
   </header>
   <div class="page-body">
-    <p id="4a4f60ee-9761-407e-b938-d16d6cc0ee6d" class="">
+    <p>
       Open Integration Architecture is a framework. The ultimate goal is to
       discover the way to make Event-Driven Architecture (EDA) better. I believe
       that we have reached this turning point where we need to take the next
       step in the evolution of system architectures.
     </p>
-    <p id="5956d475-f167-4527-8206-a1d8bea7f60a" class="">
+    <p>
       An effort to prove this out is going on in the Physical Security industry
-      and you can find out more about it here "<a
+      and you can find out more about it here, "<a
         href="/OrchestrationNextPhase.html"
         >Next Phase of Orchestrated Security Solutions</a
       >"
     </p>
-    <p id="9181aa8a-b741-4cc0-b0ac-1f4b7273519e" class="">
+    <p>
       If you want to know more about this idea and are looking for the other
       resources, below is a list of related information.
     </p>
-    <h2>Pages Here:</h2>
-    <ul id="67106886-cc9f-48a1-a49c-4a6ce9523824" class="bulleted-list">
-      <li style="list-style-type: disc">
-        <a href="EDA_patterns.html"
-          >What are the four patterns in EDA topologies?</a
-        >
+    <h2>Site Contents:</h2>
+    <ul class="bulleted-list">
+      <li style="list-style-type: none">
+        <strong>Event-Driven Architecture</strong>
+        <ul>
+          <li style="list-style-type: disc">
+            <a href="EDA_short_history.html"
+              >A short history of Architectures.</a
+            >
+          </li>
+          <li style="list-style-type: disc">
+            <a href="EDA_patterns.html"
+              >What are the four patterns in EDA topologies?</a
+            >
+          </li>
+        </ul>
       </li>
-      <li style="list-style-type: disc">
-        <a href="EDA_short_history.html">A short history of Architectures.</a>
+      <li style="list-style-type: none">
+        <strong>Orchestration Project</strong>
+        <ul>
+          <li style="list-style-type: disc">
+            <a href="/OrchestrationNextPhase.html">Next Phase of EDA</a>
+          </li>
+          <li style="list-style-type: disc">
+            <a href="/LetsProveThisOut.html">Proving the Theory</a>
+          </li>
+        </ul>
+      </li>
+      <li style="list-style-type: none">
+        <strong>Machine Learning and AI</strong>
+        <ul>
+          <li style="list-style-type: disc">
+            <a href="/MLfromEvents.html">Machine Learning from Events</a>
+          </li>
+        </ul>
       </li>
     </ul>
     <h2>Links to Other Resources:</h2>
@@ -48,8 +74,8 @@
           Solutions to the problems. (Part 2)
         </a>
       </li>
-      <li class="list-style-tyle: disc">
-        <a href="https://lpresearch.org/"> Loss Prevention Research Council </a>
+      <li style="list-style-type: disc">
+        <a href="https://lpresearch.org">Loss Prevention Research Council</a>
       </li>
     </ul>
   </div>
