adding the governance page.

--- a/comp/nav.html
+++ b/comp/nav.html
@@ -5,20 +5,21 @@
     <ul class="links">
         <li class="menu-item"><a href="#" class="arrow-button">Event-Driven Architecture</a>
             <ul class="submenu menu-items-wrapper arrow-top">
-                <li class="menu-item"><a href="/EDA_short_history.html">Short History of EDA</a></li> 
+                <li class="menu-item"><a href="/EDA_short_history.html">Short History of EDA</a></li>
                 <li class="menu-item"><a href="/EDA_patterns.html">EDA Patterns</a></li>
             </ul>
         </li>
-        
+
         <li class="menu-item"><a href="#" class="arrow-button">EDA Orchestration</a>
             <ul class="submenu menu-items-wrapper arrow-top">
                 <li class="menu-item"><a href="/OrchestrationNextPhase.html">Next Phase</a></li>
                 <li class="menu-item"><a href="/LetsProveThisOut.html">Let's Prove It</a></li>
-            </ul> 
+            </ul>
         </li>
         <li class="menu-item"><a href="#" class="arrow-button">Machine Learning and AI</a>
             <ul class="submenu menu-items-wrapper arrow-top">
-                <a href="/MLfromEvents.html">ML from Events</a></li>
+                <li class="menu-item"><a href="/MLfromEvents.html">ML from Events</a></li>
+                <li class="menu-item"><a href="ObservationDataGovernance.html">Observation Data Governance</a></li>
             </ul>
     </ul>
 
