adding some page descriptions

--- a/pages/EDA_patterns.html
+++ b/pages/EDA_patterns.html
@@ -1,7 +1,7 @@
 <article class="page sans">
   <header>
     <h1 class="page-title">Event-Driven Architecture Patterns</h1>
-    <p class="page-description"></p>
+    <blockquote class="page-description">Using the right pattern for achitecture solves problems before they happen and keeps us from reinventing the wheel.</blockquote>
   </header>
   <div class="page-body">
     <p>
