--- a/pages/EDA_short_history.html
+++ b/pages/EDA_short_history.html
@@ -1,7 +1,7 @@
 <article class="page sans">
   <header>
     <h1 class="page-title">Short History of System Architectures</h1>
-    <p class="page-description"></p>
+    <blockquote class="page-description">Understanding the history of Enterprise System's Architecture builds on the foundation of experience.</blockquote>
   </header>
   <div class="page-body">
     <h2x>The Monolith</h2>
