--- a/pages/OrchestrationNextPhase.html
+++ b/pages/OrchestrationNextPhase.html
@@ -1,14 +1,11 @@
 <article class="page sans">
   <header>
     <h1 class="page-title">Next Phase of Orchestrated Security Solutions</h1>
-    <p class="page-description"></p>
+    <blockquote class="page-description">Orchestration: The planning or coordination of the elements of a situation
+      to produce a desired effect.</blockquote>
   </header>
   <div class="page-body">
-    <p>
-      Orchestration: The planning or coordination of the elements of a situation
-      to produce a desired effect.
-    </p>
-    <hr />
+
     <h1>
       What Does the Future look like?
     </h1>
