--- a/pages/flat-template.html
+++ b/pages/flat-template.html
@@ -1,7 +1,7 @@
 <article class="page sans">
     <header>
       <h1 class="page-title">Page Title</h1>
-      <blockquote class="page-description"></blockquote>
+      <blockquote class="page-description">One Liner Summary</blockquote>
     </header>
     <div class="page-body">
       <p>Content</p>
