update to page title

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,11 +1,11 @@
 <article class="page sans">
   <header>
-    <h1 class="page-title">OIA Index</h1>
+    <h1 class="page-title">Open Integration Architecture</h1>
     <p class="page-description"></p>
   </header>
   <div class="page-body">
     <p>
-      Open Integration Architecture is a framework. The ultimate goal is to
+      Open Integration Architecture (OIA) is a framework. The ultimate goal is to
       discover the way to make Event-Driven Architecture (EDA) better. I believe
       that we have reached this turning point where we need to take the next
       step in the evolution of system architectures.
