added page link for Observation Data

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,10 +5,10 @@
   </header>
   <div class="page-body">
     <p>
-      Open Integration Architecture (OIA) is a framework. The ultimate goal is to
-      discover the way to make Event-Driven Architecture (EDA) better. I believe
-      that we have reached this turning point where we need to take the next
-      step in the evolution of system architectures.
+      Open Integration Architecture (OIA) is a framework. The ultimate goal is
+      to discover the way to make Event-Driven Architecture (EDA) better. I
+      believe that we have reached this turning point where we need to take the
+      next step in the evolution of system architectures.
     </p>
     <p>
       An effort to prove this out is going on in the Physical Security industry
@@ -54,6 +54,11 @@
         <ul>
           <li style="list-style-type: disc">
             <a href="/MLfromEvents.html">Machine Learning from Events</a>
+          </li>
+          <li style="list-style-type: disc">
+            <a href="ObservationDataGovernance.html"
+              >Observation Data Governance</a
+            >
           </li>
         </ul>
       </li>
