--- a/comp/footer.html
+++ b/comp/footer.html
@@ -45,7 +45,7 @@
         <article class="card size-xs" style="max-width: 200px">
             <header class="card-header">
                 <div class="card-badges">
-                  <a href="#" class="badge style-accent">Roy</a>
+                  <a href="#" class="badge style-red">Roy</a>
                 </div>
             
                 <img class="card-image" src="/image/RoyHeadShot.JPG" alt="Card image" />
