--- a/pages/MLfromEvents.html
+++ b/pages/MLfromEvents.html
@@ -25,7 +25,7 @@
     </p>
     <figure class="image">
       <a href="/image/ai_automation.png">
-        <img style="width: 100%" src="/image/ai_automation.png" />
+        <img src="/image/ai_automation.png" />
       </a>
       <figcaption>Architecture of AI Automation</figcaption>
     </figure>
