--- a/comp/nav.html
+++ b/comp/nav.html
@@ -19,7 +19,11 @@
         <li class="menu-item"><a href="#" class="arrow-button">Machine Learning and AI</a>
             <ul class="submenu menu-items-wrapper arrow-top">
                 <li class="menu-item"><a href="/MLfromEvents.html">ML from Events</a></li>
-                <li class="menu-item"><a href="ObservationDataGovernance.html">Observation Data Governance</a></li>
+                <li class="menu-item"><a href="/ObservationDataGovernance.html">Observation Data Governance</a></li>
+            </ul>
+        <li class="menu-item"><a href="#" class="arrow-button">Loss-Prevention</a></li>
+            <ul class="submenu menu-items-wrapper arrow-top">
+                <li class="menu-item"><a href="/SuccessMetrics.html">Metrics for Success</a></li>
             </ul>
     </ul>
 
