--- a/pages/SuccessMetrics.html
+++ b/pages/SuccessMetrics.html
@@ -1,7 +1,7 @@
 <article class="page sans">
     <header>
       <h1 class="page-title">Loss-Prevention Success Metrics</h1>
-      <blockquote class="page-description">“The goal of loss-prevention is to allow people to live safer lives.” - Cory Lowe, PHD, LPRC</blockquote>
+      <blockquote class="page-description">“The goal of loss-prevention is to allow people to live safer lives.” - Cory Lowe, PhD, LPRC</blockquote>
     </header>
     <div class="page-body">
       <h2>Defining the Problem</h2>
@@ -12,10 +12,10 @@
       <h2>Classifying the Types of Shrink</h2>
       <p>If we split shrink into thirds, we have approximately one-third of loss in administrative losses. Order issues, shipping issues, etc. One-third is internal theft from people inside the organization. And one-third is theft from external parties at the retail sales location. These are the shoplifting and ORC thefts. </p>
       <figure class="image">
-        <a href="#">
-          <img style="width: 100%" src="https://picsum.photos/1500/700" />
+        <a href="image/shrink-chart.png">
+          <img style="width: 100%" src="image/shrink-chart.png" />
         </a>
-        <figcaption>A random image - high quality images</figcaption>
+        <figcaption>How to understand where loss or shrink comes from.</figcaption>
       </figure>
       <p>Drilling in on the one-third shown in green, half of that shrink is shoplifting and half is ORC. 90% of the shrink in this third is conducted by 10% of the offenders. And often, loss-prevention practitioners know who these individuals are. They are working on tracking them and building a case so they can pursue an arrest and conviction. </p>
       <h2>Measuring Success</h2>
@@ -31,10 +31,10 @@
       <h3>Crime Displacement</h3>
       <p>Criminals are not constrained to a location or a specific type of crime. As the environment changes, they adapt to the new environment. When Big Box Store installs new deterrent measures, the criminal will move to Not So Big Box Store where that deterrent has not been installed. </p>
       <figure class="image">
-        <a href="#">
-          <img style="width: 100%" src="https://picsum.photos/1500/700" />
+        <a href="image/crime-displacement.png">
+          <img style="width: 100%" src="image/crime-displacement.png" />
         </a>
-        <figcaption>A random image - high quality images</figcaption>
+        <figcaption>Crime doesn't just go away, it moves.</figcaption>
       </figure>
       <h4>Crime Displacement Factors:</h4>
       <ul>
@@ -54,19 +54,19 @@
       <p>A goal of allowing people to live safer lives is a worthy cause, but it might be hard to measure. But measuring crime and loss from shrink is much easier to measure. So for a metric of success in loss prevention, reducing crime is how we will measure.</p>
       <p>The strategic process is simple. </p>
       <figure class="image">
-        <a href="#">
-          <img style="width: 100%" src="https://picsum.photos/1500/700" />
+        <a href="image/prevention-loop.png">
+          <img style="width: 100%" src="image/prevention-loop.png" />
         </a>
-        <figcaption>A random image - high quality images</figcaption>
+        <figcaption>Prevent crime by removing criminals.</figcaption>
       </figure>
       <p>Gathering compelling evidence to prosecute retail criminals, getting them arrested and convicted. Then, at least while they are incarcerated, they won’t be committing retail crime. The diagram above shows this as a loop. This is because the process becomes a recursive path to lower and lower crime rates. </p>
       <p>Once retail crime becomes unattractive because loss-prevention practitioners are more effective at making cases, there will be fewer cases of it. With fewer cases of retail crime, more resources can be focused on the crime that is still happening. And with more resources, we should be able to be even better at making cases and thus getting convictions. </p>
       <h3>Factors in Successful Prosecution:</h3>
       <figure class="image">
-        <a href="#">
-          <img style="width: 100%" src="https://picsum.photos/1500/700" />
+        <a href="image/prosecution.png">
+          <img style="width: 100%" src="image/prosecution.png" />
         </a>
-        <figcaption>A random image - high quality images</figcaption>
+        <figcaption>What makes for a successful prosecution?</figcaption>
       </figure>
       <ul>
         <li>Low-enforcement areas</li>
